tests/ecc-aws-248-k8s_cluster_network_firewall_inbound_rule_permissive_to_all_traffic/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "248_security_group_red",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "111111111111",
                "GroupId": "sg-1234567asdfg",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-248-k8s_cluster_network_firewall_inbound_rule_permissive_to_all_traffic"
                    }
                ],
                "VpcId": "vpc-12345asdfg"
            }
        ],
        "ResponseMetadata": {}
    }
}
