tests/ecc-aws-248-k8s_cluster_network_firewall_inbound_rule_permissive_to_all_traffic/placebo-red/eks.ListClusters_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "clusters": [
            "248_eks_cluster_red"
        ]
    }
}
